fixed this.survivdeNode not defined bug by binding momogen method

--- a/style.css
+++ b/style.css
@@ -28,9 +28,17 @@ body{
 
 .inventory{
     position:absolute;
+    /* background-color: rgba(241, 151, 14, 0.8); */
     height:10vh;
     width:5vw;
+    margin-left: 0.5vw;
     bottom: 30vh;
+}
+
+.items{
+    height: 12vh;
+    width: 8vw;
+    margin-left: 0.5vw;
 }
 
 .questionbox{
