--- a/style.css
+++ b/style.css
@@ -29,18 +29,18 @@ body{
 }
 
 .inventory{
-    position:absolute;
+    position:relative;
     /* background-color: rgba(241, 151, 14, 0.8); */
-    height:10vh;
+    height:13vh;
     width:5vw;
-    margin-left: 0.5vw;
-    bottom: 30vh;
+    top: 5vh;
+    left:90vw;
 }
 
 .items{
+    /* background-color: red; */
     height: 12vh;
     width: 8vw;
-    margin-left: 0.5vw;
 }
 
 .questionbox{
