--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ body{
     background-color:black;
 }
 
+.volumebtn{
+    background-image: url("/assets/icon/volume.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* determines background image size */
+    position: absolute;
+    height: 4.5vh;
+    width: 2.5vw;
+    margin: 1vw;
+}
+
 .inventory{
     position:relative;
     /* background-color: rgba(241, 151, 14, 0.8); */
