solidifying plot and storyline

--- a/style.css
+++ b/style.css
@@ -79,6 +79,15 @@ body{
     color: white;
 }
 
+#skip{
+    position: absolute;
+    right: 1vw;
+    bottom: 2vh;
+    background-color: red;
+    width: 6vw;
+    height: 2vh;
+}
+
 .option-buttons{
     position: absolute;
     height:10vh;
